<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ActivityProducts">
    <androidx.cardview.widget.CardView
        android:id="@+id/crdBasket"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#00B61010"
        app:cardCornerRadius="35dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        >

        <ImageButton
            android:id="@+id/basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e18220"
            android:contentDescription="@string/todo"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:text="@string/textview"
            app:srcCompat="@drawable/basket_logo" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/d"
        android:textColor="#e18220"
        android:textSize="24sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/h_kinds"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:scrollbarSize="0dp" />

    <GridView
        android:id="@+id/ProductsList"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_alignParentBottom="true"
        android:divider="#FFFFFFFF"
        android:numColumns="2"
        android:stretchMode="columnWidth" />
</RelativeLayout>