<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdProductImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="5dp"
        android:background="#ffffffff"
        app:cardCornerRadius="10dp">

        <ImageButton
            android:id="@+id/basket_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffffff"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="#ffffffff"
        android:gravity="center"
        android:text="---" />

    <TextView
        android:id="@+id/textCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="#ffffffff"
        android:gravity="center"
        android:text="---"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/crdDecrease"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp">

        <Button
            android:id="@+id/decrease"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e18220"
            android:text="@string/i"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/crdRemove_from_basket"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp">

        <Button
            android:id="@+id/remove_from_basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5C5858"
            android:text="@string/x"
            android:textColor="#ffffffff"

            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/crdIncrease"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        app:cardCornerRadius="10dp">

        <Button
            android:id="@+id/increase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e18220"
            android:text="@string/o"
            android:textColor="#ffffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
